--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "tic_tac_toe_mobile",
-    "slug": "tic_tac_toe_mobile",
+    "name": "Tic Tac Toe",
+    "slug": "tictactoe",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
